gateway-service/k8s-manifest/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: recsys
spec:
  selector:
    app: gateway  # This must match the labels in your Gateway Deployment
  ports:
      - name: metrics       
        protocol: TCP
        port: 80            
        targetPort: 8000
  type: ClusterIP
